add a function message

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Realtime-Chat-",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server",
@@ -25,5 +24,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
-  }
+  },
+  "description": ""
 }
