--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "vanillajs": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
